# quorum-cli

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/ADR/: 0001-json-rpc-over-stdio.md  0004-zustand-for-state.md  0005-seven-discussion-methods.md
docs/api/: IPC_PROTOCOL.md
docs/tutorials/: ADDING_A_METHOD.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CommandPalette.tsx  Header.tsx  LanguageSelector.tsx
frontend/src/i18n/: types.ts
frontend/src/i18n/translations/: de.ts  en.ts  es.ts  fr.ts  it.ts  sv.ts
frontend/src/ipc/: protocol.ts
frontend/src/store/: index.ts
frontend/src/utils/: export.ts
frontend/src/utils/export/: pdf-renderer.ts
frontend/src/utils/export/parser/: advocate-parser.ts  base-parser.ts  brainstorm-parser.ts  delphi-parser.ts  index.ts  oxford-parser.ts  socratic-parser.ts  standard-parser.ts  tradeoff-parser.ts  types.ts
frontend/src/utils/export/schemas/: advocate-schema.ts  base-schema.ts  brainstorm-schema.ts  delphi-schema.ts  index.ts  oxford-schema.ts  socratic-schema.ts  standard-schema.ts  tradeoff-schema.ts
src/: conftest.py
src/quorum/: config.py  constants.py  providers.py
tests/: test_config.py
