[project]
name = "quorum-cli"
dynamic = ["version"]
description = "Multi-agent AI discussion system for structured debates"
readme = "README.md"
license = {text = "BSL-1.1"}
authors = [
    {name = "Detrol", email = "andreas.thun@gmail.com"}
]
keywords = ["ai", "multi-agent", "discussion", "llm", "debate", "brainstorm", "deliberation", "consensus"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0,<2.0",
    "anthropic>=0.40,<1.0",
    "google-genai>=1.0,<2.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.24,<1.0",
    "mcp>=1.0.0",
]

[project.scripts]
quorum = "quorum.main:main"
quorum-mcp-server = "quorum.mcp:main"

[project.urls]
Homepage = "https://github.com/Detrol/quorum-cli"
Repository = "https://github.com/Detrol/quorum-cli"
Issues = "https://github.com/Detrol/quorum-cli/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-timeout>=2.0,<3.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-ruff>=0.4.0,<1.0",
    "ruff>=0.1.0,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/quorum/constants.py"

[tool.hatch.build.targets.wheel]
packages = ["src/quorum"]

[tool.hatch.build.targets.wheel.force-include]
"frontend/dist" = "quorum/_frontend"
".env.example" = "quorum/.env.example"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "src"]
pythonpath = ["src"]
# Skip live tests by default - they require API credits
# Run live tests explicitly with: pytest -m live
# --ruff enables linting as part of test run
addopts = "-m 'not live' --ruff"
markers = [
    "live: marks tests as requiring live API keys (run with '-m live')",
    "timeout: set test timeout in seconds",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled separately

[tool.ruff.lint.per-file-ignores]
# Tests: allow common patterns
"tests/*.py" = [
    "E402",  # Module level import not at top (pytestmark before imports)
    "E741",  # Ambiguous variable name (common in list comprehensions)
    "F841",  # Unused variable (common in mock patches)
]
